--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -1,13 +1,55 @@
 ---
-layout: "page"
+layout: "post"
 title: "DSB 2020 rennes"
+description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2020/
 image: img/rennes.jpg
+author:
+  name: Eric Rivals
+  email: rivals@lirmm.fr	
+  twitter: # twitter username without the @ symbol
+bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
+# How to participate
+<u>Deadlines:</u>
 
-DSB2020 page test
+* Registration: January 27
+* Abstract submission: January 20 
+
+## 1/2: Registration (mandatory) 
+
+* Participation is free, but **registration is mandatory**. Please fill this [form](
+  https://sondages.inria.fr/index.php/813188?lang=en). 
+  
+  Note: The form is filled in to steps. **(1)** fill your name and email addresse **(2)** you'll receive an email with a link for finishing the registration. 
+  
+  The number of attendees is limited, please avoid late registrations.
+
+## 2/2: Submit an abstract
+If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)
 
 
 
-Participation is free, but registration is mandatory. Please fill this [form](
-https://sondages.inria.fr/index.php/676557?lang=en ). 
+# Program
+[To be announced]({{ site.baseurl }}{% link DSB2020/program.md %})
+
+# Participants
+[Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
+
+# When
+* any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020))
+* February 3 (Monday): arrival and evening welcome reception (no talks)
+* February 4 (Tuesday): first workshop day; dinner
+* February 5 (Wednesday): second workshop day
+
+# Where
+![Inria center](img/inria.jpg) The workshop will take place at Inria Center - Rennes - France
+[How to reach the center](https://www.inria.fr/en/centre/rennes/overview/practical-info).
+We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
+
+# Supports
+This meeting is supported by 
+ * [Inria](www.inria.fr)
+ * [CNRS GDR BIM](http://www.gdr-bim.cnrs.fr/)
+ * [CNRS GDR IM](https://www.gdr-im.fr/)
+ * [Université de Rennes 1](https://international.univ-rennes1.fr/)
