--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -37,7 +37,7 @@ If you wish to present a talk, submit your abstract via [EasyChair](https://easy
 [Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
 
 # When
-* any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020))
+<!-- * any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)) -->
 * February 3 (Monday): arrival and evening welcome reception (no talks)
 * February 4 (Tuesday): first workshop day; dinner
 * February 5 (Wednesday): second workshop day
