--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -4,11 +4,6 @@ title: "DSB 2020 rennes"
 description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2020/
 image: img/rennes.jpg
-author:
-  name: Eric Rivals
-  email: rivals@lirmm.fr	
-  twitter: # twitter username without the @ symbol
-bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 # How to participate
 <u>Deadlines:</u>
@@ -18,12 +13,16 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 
 ## 1/2: Registration (mandatory) 
 
-* Participation is free, but **registration is mandatory**. Please fill this [form](
+* Participation is free, but registration is mandatory. Please fill this [form](
   https://sondages.inria.fr/index.php/813188?lang=en). 
-  
-  Note: The form is filled in to steps. **(1)** fill your name and email addresse **(2)** you'll receive an email with a link for finishing the registration. 
-  
-  The number of attendees is limited, please avoid late registrations.
+
+### Notes
+
+
+* The form is filled in to steps. 
+  1. fill your name and email address
+  2. you'll receive an email with a link for finishing the registration. 
+* The number of attendees is limited. Avoid late registrations.
 
 ## 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)
@@ -49,7 +48,7 @@ We advice you to book an hotel in the city center. The campus is accessible by b
 
 # Supports
 This meeting is supported by 
- * [Inria](www.inria.fr)
+ * [Inria](http://www.inria.fr)
  * [CNRS GDR BIM](http://www.gdr-bim.cnrs.fr/)
  * [CNRS GDR IM](https://www.gdr-im.fr/)
  * [Université de Rennes 1](https://international.univ-rennes1.fr/)
