--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -6,6 +6,8 @@ permalink: /DSB2020/
 image: img/rennes.jpg
 ---
 # How to participate
+To participate you need to register (step 1/2) and potentially, to submit of an abstract (step 2/2). 
+
 <u>Deadlines:</u>
 
 * Registration: January 27
@@ -27,24 +29,38 @@ image: img/rennes.jpg
 ## 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)
 
-
+As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
 # Program
 [To be announced]({{ site.baseurl }}{% link DSB2020/program.md %})
 
+
+
+# Mailing List
+We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fresh informations. Most of you are already registered.
+* to subscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title `subscribe dsb2020 first-name last-name`
+* to unsubscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title  `unsubscribe dsb2020`
+
+
 # Participants
+
 [Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
 
-# When
+# Partical
+## When
 <!-- * any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)) -->
 * February 3 (Monday): arrival and evening welcome reception (no talks)
 * February 4 (Tuesday): first workshop day; dinner
 * February 5 (Wednesday): second workshop day
 
-# Where
+## Where
 ![Inria center](img/inria.jpg) The workshop will take place at Inria Center - Rennes - France
 [How to reach the center](https://www.inria.fr/en/centre/rennes/overview/practical-info).
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
+
+## Hotels
+Soon we will propose a list of preferred hotels. 
+
 
 # Supports
 This meeting is supported by 
