--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -6,7 +6,7 @@ permalink: /DSB2020/
 image: img/rennes.jpg
 ---
 # How to participate
-To participate you need to register (step 1/2) and potentially, to submit of an abstract (step 2/2). 
+To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2). 
 
 <u>Deadlines:</u>
 
