adding dates to title DSB2020

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -1,6 +1,6 @@
 ---
 layout: "post"
-title: "DSB 2020 rennes"
+title: "DSB 2020 rennes - Feb 4+5"
 description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2020/
 image: img/rennes.jpg
