--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -8,63 +8,69 @@ image: img/rennes.jpg
 # How to participate
 To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2). 
 
-<u>Deadlines:</u>
+<u>Deadline:</u> January 20
 
-* Registration: January 27
-* Abstract submission: January 20 
-
-## 1/2: Registration (mandatory) 
+### 1/2: Registration (mandatory) 
 
 * Participation is free, but registration is mandatory. Please fill this [form](
   https://sondages.inria.fr/index.php/813188?lang=en). 
 
-### Notes
+==Note== the form is filled in to steps:
 
+1. Fill your name and email address
+2. You'll receive an email with a link for finishing the registration. 
 
-* The form is filled in to steps. 
-  1. fill your name and email address
-  2. you'll receive an email with a link for finishing the registration. 
-* The number of attendees is limited. Avoid late registrations.
+The number of attendees is limited. Avoid late registrations.
 
-## 2/2: Submit an abstract
+### 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)
 
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
-# Program
+## Program
 [To be announced]({{ site.baseurl }}{% link DSB2020/program.md %})
 
 
 
-# Mailing List
+## Mailing List
 We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fresh informations. Most of you are already registered.
 * to subscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title `subscribe dsb2020 first-name last-name`
 * to unsubscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title  `unsubscribe dsb2020`
 
 
-# Participants
+## Participants
 
 [Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
 
-# Partical
-## When
+# Pratical
+#### When
 <!-- * any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)) -->
 * February 3 (Monday): arrival and evening welcome reception (no talks)
 * February 4 (Tuesday): first workshop day; dinner
 * February 5 (Wednesday): second workshop day
 
-## Where
+#### Where
 ![Inria center](img/inria.jpg) The workshop will take place at Inria Center - Rennes - France
 [How to reach the center](https://www.inria.fr/en/centre/rennes/overview/practical-info).
+
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
 
-## Hotels
+### Hotels
 Soon we will propose a list of preferred hotels. 
 
 
-# Supports
+## Supports
 This meeting is supported by 
  * [Inria](http://www.inria.fr)
  * [CNRS GDR BIM](http://www.gdr-bim.cnrs.fr/)
  * [CNRS GDR IM](https://www.gdr-im.fr/)
  * [Université de Rennes 1](https://international.univ-rennes1.fr/)
+
+
+
+## Organizers
+
+* Lolita Lecompte
+* Marie Le Roïc
+* Téo Lemane
+* Pierre Peterlongo
