adding the hotel list

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -56,7 +56,13 @@ We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fr
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
 
 ### Hotels
-Soon we will propose a list of preferred hotels. 
+Here is a list of hotels in the city centre of Rennes from where it is easy to take the bus to reach the Inria center:
+
+- [Mercure Place de Bretagne](https://all.accor.com/hotel/2027/index.fr.shtml) 
+- [Hôtel Lanjuinais](https://www.hotel-lanjuinais.com/) 
+- [Hôtel Le Florin](https://www.hotel-leflorin-rennes.fr/) 
+- [Hôtel Astrid](http://www.hotel-astrid-rennes.eu/en/) 
+- [Aparthotel Adagio](https://www.adagio-city.com/gb/hotel-8398-aparthotel-adagio-access-rennes-centre/index.shtml) 
 
 
 ## Supports
