update directions and participants

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -51,7 +51,7 @@ We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fr
 
 #### Where
 ![Inria center](img/inria.jpg) The workshop will take place at Inria Center - Rennes - France
-[How to reach the center](https://www.inria.fr/en/centre/rennes/overview/practical-info).
+[How to reach the center](http://www.irisa.fr/en/access-map).
 
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
 
