link to program

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -28,7 +28,7 @@ If you wish to present a talk, submit your abstract via [EasyChair](https://easy
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
 ## Program
-[To be announced]({{ site.baseurl }}{% link DSB2020/program.md %})
+[Proposed talks]({{ site.baseurl }}{% link DSB2020/program.md %})
 
 
 
