program in line

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -28,9 +28,13 @@ If you wish to present a talk, submit your abstract via [EasyChair](https://easy
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
 ## Program
-[Proposed talks]({{ site.baseurl }}{% link DSB2020/program.md %})
+[Program (pdf)]({{ site.baseurl }}{% link DSB2020/program_DSB2020.pdf %})
 
 
+
+## Participants
+
+[Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
 
 ## Mailing List
 We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fresh informations. Most of you are already registered.
@@ -38,9 +42,6 @@ We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fr
 * to unsubscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title  `unsubscribe dsb2020`
 
 
-## Participants
-
-[Find your name here]({{ site.baseurl }}{% link DSB2020/participants.md %})
 
 # Pratical
 #### When
