--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -69,9 +69,16 @@ Here is a list of hotels in the city centre of Rennes from where it is easy to t
 ## Supports
 This meeting is supported by 
  * [Inria](http://www.inria.fr)
+
  * [CNRS GDR BIM](http://www.gdr-bim.cnrs.fr/)
+
  * [CNRS GDR IM](https://www.gdr-im.fr/)
+
  * [Université de Rennes 1](https://international.univ-rennes1.fr/)
+
+ * [IFB](https://www.france-bioinformatique.fr/)
+
+   
 
 
 
