added info on how to come

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -54,6 +54,24 @@ We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fr
 ![Inria center](img/inria.jpg) The workshop will take place at Inria Center - Rennes - France
 [How to reach the center](http://www.irisa.fr/en/access-map).
 
+How to get there?
+
+* From the SNCF railway station
+  * [By public transport](https://www.star.fr/accueil/)
+    1. Take the Metro <img src="img/csm_LA_c8289fdfd1.png" width="20"> at Gares (Rennes) station in the direction of *J.F. Kennedy (Rennes)*, get off at `République` station.
+    2. At `République` station, take either one of the follwing buses and get off at `Tournebride`.
+      * the bus line <img src="img/csm_0004_5a1593d7e6.png" width="20"> towards *ZA Saint Sulpice*
+      * the bus line <img src="img/csm_0006_c0d1f7d041.png" width="20"> towards *Cesson-Sévigné/Chantepie*
+      * the bus line <img src="img/csm_0040_e11cb1c4c3.png" width="20"> towards *Beaulieu Atalante*
+  * By taxi: The average price of the race of around 15 € during the day.
+* From Rennes Saint-Jacques airport
+  * By bus : Take the bus line <img src="img/csm_0006_c0d1f7d041.png" width="20"> direction *Cesson-Sévigné Rigourdière*. Get off at the stop `Tournebride` ([learn more about the public transport network](https://www.star.fr/accueil/))
+  * By taxi : The average price of the race is around 35 € during the day.
+
+Join Inria from the `Tournebride` stop:
+<iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1331.8723387906512!2d-1.6395825416157417!3d48.1151608448054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x480edee5a599f107%3A0x318da7854b094389!2sInria%20Rennes%20-%20Bretagne%20Atlantique%2C%20Avenue%20G%C3%A9n%C3%A9ral%20Leclerc%2C%20Rennes!3m2!1d48.1163823!2d-1.6397096999999998!4m5!1s0x480edee6b75525cb%3A0xc4eb14400bd802a5!2sTournebride%2C%2035510%20Cesson-S%C3%A9vign%C3%A9!3m2!1d48.114025!2d-1.636082!5e0!3m2!1sen!2sfr!4v1580396543307!5m2!1sen!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
 
 ### Hotels
