add link to slides

--- a/DSB2020/DSB2020.md
+++ b/DSB2020/DSB2020.md
@@ -27,7 +27,12 @@ If you wish to present a talk, submit your abstract via [EasyChair](https://easy
 
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
+## Slides
+
+Link to all provided slides is [here]({{ site.baseurl }}{% link DSB2020/DSB2020slides.pdf %})
+
 ## Program
+
 [Program (pdf)]({{ site.baseurl }}{% link DSB2020/program_DSB2020.pdf %})
 
 
@@ -71,7 +76,6 @@ How to get there?
 
 Join Inria from the `Tournebride` stop:
 <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1331.8723387906512!2d-1.6395825416157417!3d48.1151608448054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x480edee5a599f107%3A0x318da7854b094389!2sInria%20Rennes%20-%20Bretagne%20Atlantique%2C%20Avenue%20G%C3%A9n%C3%A9ral%20Leclerc%2C%20Rennes!3m2!1d48.1163823!2d-1.6397096999999998!4m5!1s0x480edee6b75525cb%3A0xc4eb14400bd802a5!2sTournebride%2C%2035510%20Cesson-S%C3%A9vign%C3%A9!3m2!1d48.114025!2d-1.636082!5e0!3m2!1sen!2sfr!4v1580396543307!5m2!1sen!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
 
 We advice you to book an hotel in the city center. The campus is accessible by bus in about fifteen minutes from the city centre
 
