update website with pictures and few fixes

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -3,7 +3,7 @@ layout: "post"
 title: "DSB 2021 Milano - Feb 11+12"
 description: Workshop Data Structures in Bioinformatics
 permalink: /DSB2021/
-image: img/rennes.jpg
+image: img/milano_portanuova.jpg
 ---
 # How to participate
 To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2). 
@@ -29,11 +29,11 @@ As previously, there is no formal review, and the organizers reserve the  right 
 
 ## Slides
 
-Link to all provided slides will be [here]({{ site.baseurl }}{% link DSB2021/DSB2021slides.pdf %})
+Link to all provided slides will be provided soon.
 
 ## Program
 
-The program will be [Program (pdf)]({{ site.baseurl }}{% link DSB2021/program_DSB2021.pdf %})
+The program will be provided soon.
 
 
 
@@ -43,8 +43,8 @@ The program will be [Program (pdf)]({{ site.baseurl }}{% link DSB2021/program_DS
 
 ## Mailing List
 We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fresh informations. Most of you are already registered.
-* to subscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title `subscribe dsb2020 first-name last-name`
-* to unsubscribe: send a mail to [sympa_inria@inria.fr](mailto:sympa_inria@inria.fr) with title  `unsubscribe dsb2020`
+* to subscribe: send a mail to [todo@todo.it](mailto:null) with title `subscribe dsb2020 first-name last-name`
+* to unsubscribe: send a mail to [todo@todo.it](mailto:null) with title  `unsubscribe dsb2020`
 
 
 
@@ -56,7 +56,9 @@ We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fr
 
 #### Where
 
-![Inria center](img/inria.jpg) The workshop will take place at Università di Milano - Bicocca, U4 building, Milano, Italy, if the health situation will allow it.
+![University of Milan-Bicocca U4](img/bicocca.png) 
+
+The workshop will take place at Università di Milano - Bicocca, U4 building, Milano, Italy, if the health situation will allow it.
 Otherwise it will be an online workshop.
 
 
