--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -12,18 +12,12 @@ To participate you need to register (step 1/2) and potentially, to submit an abs
 
 ### 1/2: Registration (mandatory) 
 
-* Participation is free, but registration is mandatory. Please fill this [form](
-  https://sondages.inria.fr/index.php/813188?lang=en). 
-
-==Note== the form is filled in to steps:
-
-1. Fill your name and email address
-2. You'll receive an email with a link for finishing the registration. 
+* Participation is free, but registration is mandatory. Please fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSevYzjniyLKGT93ryzwqvaaotoBV0BZuqeNUGYQb7ZksyB5iw/viewform?usp=sf_link).
 
 The number of attendees is limited. Avoid late registrations.
 
 ### 2/2: Submit an abstract
-If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2021)
+<!-- If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2021) -->
 
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
@@ -42,10 +36,10 @@ The program will be provided soon.
 [Find your name here]({{ site.baseurl }}{% link DSB2021/participants.md %})
 
 ## Mailing List
-We use the dsb2020@inria.fr mailing list for discussions and the diffusion of fresh informations. Most of you are already registered.
-* to subscribe: send a mail to [todo@todo.it](mailto:null) with title `subscribe dsb2020 first-name last-name`
-* to unsubscribe: send a mail to [todo@todo.it](mailto:null) with title  `unsubscribe dsb2020`
+We use the dsb2021-groups@unimib.it mailing list for discussions and the diffusion of fresh informations. 
+You will be added to the mailing list when you register.
 
+* i  To unsubscribe: send email to dsb2021-groups+unsubscribe@unimib.it
 
 
 # Practical
@@ -62,10 +56,10 @@ The workshop will take place at Università di Milano - Bicocca, U4 building, Mi
 Otherwise it will be an online workshop.
 
 
-How to get there?
+#### How to get there?
 
-[Google Maps
-directions](https://www.google.it/maps/place/Edificio+U4+-+Universit%C3%A0+degli+Studi+di+Milano+-+Bicocca/@45.5134031,9.2095216,17z)
+![Google Maps directions](img/U4.png)
+[Click here to go to Google Maps](https://www.google.com/maps/d/edit?mid=15abaZDT8Q0l6jSsy58cDcDXghLLVOc8o&usp=sharing)
 
 
 The building is close to the Bicocca underground station Bicocca of the 
