fix easychair link

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -17,7 +17,7 @@ To participate you need to register (step 1/2) and potentially, to submit an abs
 The number of attendees is limited. Avoid late registrations.
 
 ### 2/2: Submit an abstract
-<!-- If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/my/conference?conf=dsb2021) -->
+If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/conferences/?conf=dsb2021)
 
 As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
 
