--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -39,7 +39,7 @@ The program will be provided soon.
 We use the dsb2021-groups@unimib.it mailing list for discussions and the diffusion of fresh informations. 
 You will be added to the mailing list when you register.
 
-* i  To unsubscribe: send email to dsb2021-groups+unsubscribe@unimib.it
+* To unsubscribe: send email to dsb2021-groups+unsubscribe@unimib.it
 
 
 # Practical
