--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -45,34 +45,16 @@ You will be added to the mailing list when you register.
 # Practical
 #### When
 <!-- * any time before January 15: register and submit a talk (via [EasyChair](https://easychair.org/my/conference?conf=dsb2020)) -->
-* February 11 (Thursday): first workshop day; dinner
+* February 11 (Thursday): first workshop day
 * February 12 (Friday): second workshop day
 
 #### Where
 
 ![University of Milan-Bicocca U4](img/bicocca.png) 
 
-The workshop will take place at Università di Milano - Bicocca, U4 building, Milano, Italy, if the health situation will allow it.
-Otherwise it will be an online workshop.
-
-
-#### How to get there?
-
-![Google Maps directions](img/U4.png)
-[Click here to go to Google Maps](https://www.google.com/maps/d/edit?mid=15abaZDT8Q0l6jSsy58cDcDXghLLVOc8o&usp=sharing)
-
-
-The building is close to the Bicocca underground station Bicocca of the 
-([MM5](https://en.wikipedia.org/wiki/Milan_Metro_Line_5)) line.
-
-Milan is easily reachable by all major European and main international airports.
-Milano Linate airport (code LIN) is the closest airport: it takes less
-than 30 minutes to reach us via taxi and 1 hour by public
-transportation.
-
-
-### Hotels
-The suggested hotels are [Starhotel Tourist](http://www.starhotels.com/en/our-hotels/tourist-milan/) and [Hotel Arcimboldi](http://www.hotelarcimboldi.it/en/) that are both within a 5-minute walk from the workshop site.
+The workshop will take place **virtually** and is organized by the Università di Milano - Bicocca, Milano, Italy.
+We will send the instructions for joining the conference to all
+registered participants via email.
 
 ## Supports
 This meeting is supported by 
