--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -27,8 +27,54 @@ Link to all provided slides will be provided soon.
 
 ## Program
 
-The program will be provided soon.
+### February 11
 
+**13:00** Opening
+**13:25** Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli
+*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*  
+**13:50** Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals
+*Efficient Construction of Hierarchical Overlap Graphs*  
+**14:15** Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu
+*Safety in multi-assembly via paths appearing in all path covers of a DAG*  
+**14:40** Break
+**15:30** Roland Wittler, Andreas Rempel and Marco Sohn
+*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*  
+**15:55** Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Gregory Kucherov and Michael Baym
+*All microbes on a flashdrive [work in progress]*  
+**16:20** Parsoa Khorsand, Luca Denti, Paola Bonizzoni, Rayan Chikhi and Fereydoun Hormozdiari
+*Comparative genome analysis using sample-specific string detection in accurate long reads*  
+**16:45** Tizian Schulz, Roland Wittler and Jens Stoye
+*Sequence-Based Pangenomic Core Detection*  
+**17:10** Andreas Rempel
+*Developing a standard interface for sets of k-mer sets index structures*  
+**17:35** Jamshed Khan and Robert Patro
+*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*  
+
+### February 12
+
+**13:00** Christina Boucher, Travis Gagie, Tomohiro I, Dominik Köppl, Ben Langmead, Giovanni Manzini, Gonzalo Navarro, Alejandro Pacheco and Massimiliano Rossi
+*PHONI: Streamed Matching Statistics with Multi-Genome References*  
+**13:25** Lucas Robidou and Pierre Peterlongo
+*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*  
+**13:50** Yoshihiro Shibuya, Djamal Belazzougui and Gregory Kucherov
+*Succinct k-mer tables in practice*  
+**14:15** Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo
+*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*  
+**14:40** Break
+**15:30** Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann
+*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*  
+**15:55** Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev
+*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*  
+**16:20** Travis Gagie
+*r-indexing Wheeler graphs*  
+**16:45** Nicola Cotumaccio and Nicola Prezza
+*Indexing and compression: from Wheeler graphs to arbitrary graphs*  
+**17:10** Travis Gagie, Garance Gourdel and Giovanni Manzini
+*XBWTing Readsets*  
+**17:35** Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi
+*PFP Compressed Suffix Trees*  
+
+All times are **CET (UTC +1)**
 
 
 ## Participants
