break/opening times

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -29,14 +29,14 @@ Link to all provided slides will be provided soon.
 
 ### February 11
 
-**13:00** Opening
+**13:00** Opening   
 **13:25** Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli
 *Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*  
 **13:50** Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals
 *Efficient Construction of Hierarchical Overlap Graphs*  
 **14:15** Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu
 *Safety in multi-assembly via paths appearing in all path covers of a DAG*  
-**14:40** Break
+**14:40** Break   
 **15:30** Roland Wittler, Andreas Rempel and Marco Sohn
 *SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*  
 **15:55** Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Gregory Kucherov and Michael Baym
@@ -60,7 +60,7 @@ Link to all provided slides will be provided soon.
 *Succinct k-mer tables in practice*  
 **14:15** Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo
 *kmtricks: Efficient construction of Bloom filters for large sequencing data collections*  
-**14:40** Break
+**14:40** Break   
 **15:30** Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann
 *Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*  
 **15:55** Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev
@@ -73,6 +73,7 @@ Link to all provided slides will be provided soon.
 *XBWTing Readsets*  
 **17:35** Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi
 *PFP Compressed Suffix Trees*  
+**18:00** Conclusion
 
 All times are **CET (UTC +1)**
 
