update Karel's title/authors

--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -6,11 +6,11 @@ permalink: /DSB2021/
 image: img/milano_portanuova.jpg
 ---
 # How to participate
-To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2). 
+To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2).
 
 <u>Deadline:</u> January 27
 
-### 1/2: Registration (mandatory) 
+### 1/2: Registration (mandatory)
 
 * Participation is free, but registration is mandatory. Please fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSevYzjniyLKGT93ryzwqvaaotoBV0BZuqeNUGYQb7ZksyB5iw/viewform?usp=sf_link).
 
@@ -19,7 +19,7 @@ The number of attendees is limited. Avoid late registrations.
 ### 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/conferences/?conf=dsb2021)
 
-As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program. 
+As previously, there is no formal review, and the organizers reserve the  right to select talks from the submissions to obtain a diverse and  interesting program.
 
 ## Slides
 
@@ -29,73 +29,73 @@ Link to all provided slides will be provided soon.
 
 ### February 11
 
-**13:00** 
-Opening   
-**13:25** 
+**13:00**
+Opening
+**13:25**
 Massimo Cairo, Shahbaz Khan, Romeo Rizzi, Sebastian Schmidt, Alexandru Tomescu and Elia Zirondelli
-*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*  
-**13:50** 
+*Genome assembly, a universal theoretical framework: unifying and generalizing the safe and complete algorithms*
+**13:50**
 Sung Gwan Park, Bastien Cazaux, Kunsoo Park and Eric Rivals
-*Efficient Construction of Hierarchical Overlap Graphs*  
-**14:15** 
+*Efficient Construction of Hierarchical Overlap Graphs*
+**14:15**
 Manuel Cáceres, Brendan Mumey, Edin Husic, Romeo Rizzi, Massimo Cairo, Kristoffer Sahlin and Alexandru Tomescu
-*Safety in multi-assembly via paths appearing in all path covers of a DAG*  
-**14:40** 
-Break   
-**15:30** 
+*Safety in multi-assembly via paths appearing in all path covers of a DAG*
+**14:40**
+Break
+**15:30**
 Roland Wittler, Andreas Rempel and Marco Sohn
-*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*  
-**15:55** 
+*SANS serif: alignment-free, whole-genome based phylogenetic reconstruction*
+**15:55**
 Lucas Robidou and Pierre Peterlongo
-*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*  
-**16:20** 
+*On the fly detection of Bloom filter false positives and application indexing k-mers with their abundances*
+**16:20**
 Parsoa Khorsand, Luca Denti, Paola Bonizzoni, Rayan Chikhi and Fereydoun Hormozdiari
-*Comparative genome analysis using sample-specific string detection in accurate long reads*  
-**16:45** 
+*Comparative genome analysis using sample-specific string detection in accurate long reads*
+**16:45**
 Tizian Schulz, Roland Wittler and Jens Stoye
-*Sequence-Based Pangenomic Core Detection*  
-**17:10** 
+*Sequence-Based Pangenomic Core Detection*
+**17:10**
 Andreas Rempel
-*Developing a standard interface for sets of k-mer sets index structures*  
-**17:35** 
+*Developing a standard interface for sets of k-mer sets index structures*
+**17:35**
 Jamshed Khan and Robert Patro
-*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*  
+*Cuttlefish: Fast, parallel, and low-memory compaction of de Bruijn graphs from large-scale genome collections*
 
 ### February 12
 
-**13:00** 
+**13:00**
 Christina Boucher, Travis Gagie, Tomohiro I, Dominik Köppl, Ben Langmead, Giovanni Manzini, Gonzalo Navarro, Alejandro Pacheco and Massimiliano Rossi
-*PHONI: Streamed Matching Statistics with Multi-Genome References*  
-**13:25** 
-Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Gregory Kucherov and Michael Baym
-*All microbes on a flashdrive [work in progress]*  
-**13:50** 
+*PHONI: Streamed Matching Statistics with Multi-Genome References*
+**13:25**
+Karel Břinda, Simone Pignotti, Kamil Salikhov, Rayan Chikhi, Zamin Iqbal, Gregory Kucherov and Michael Baym
+*All microbes on a flashdrive*
+**13:50**
 Yoshihiro Shibuya, Djamal Belazzougui and Gregory Kucherov
-*Succinct k-mer tables in practice*  
-**14:15** 
+*Succinct k-mer tables in practice*
+**14:15**
 Téo Lemane, Paul Medvedev, Rayan Chikhi and Pierre Peterlongo
-*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*  
-**14:40** 
-Break   
-**15:30** 
+*kmtricks: Efficient construction of Bloom filters for large sequencing data collections*
+**14:40**
+Break
+**15:30**
 Till Hartmann, Elias Kuthe, Alicia Tüns, Alexander Schramm, Jens Zentgraf and Sven Rahmann
-*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*  
-**15:55** 
+*Alignment-free detection of copy number variants using strongly unique k-mers and fused lasso regularization*
+**15:55**
 Antonio Blanca, Robert S. Harris, David Koslicki and Paul Medvedev
-*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*  
-**16:20** 
+*The statistics of k-mers from a sequence undergoing a simple mutation process without spurious matches*
+**16:20**
 Travis Gagie
-*r-indexing Wheeler graphs*  
-**16:45** 
+*r-indexing Wheeler graphs*
+**16:45**
 Nicola Cotumaccio and Nicola Prezza
-*Indexing and compression: from Wheeler graphs to arbitrary graphs*  
-**17:10** 
+*Indexing and compression: from Wheeler graphs to arbitrary graphs*
+**17:10**
 Travis Gagie, Garance Gourdel and Giovanni Manzini
-*XBWTing Readsets*  
-**17:35** 
+*XBWTing Readsets*
+**17:35**
 Christina Boucher, Ondrej Cvacho, Travis Gagie, Jan Holub, Giovanni Manzini, Gonzalo Navarro and Massimiliano Rossi
-*PFP Compressed Suffix Trees*  
-**18:00** 
+*PFP Compressed Suffix Trees*
+**18:00**
 Conclusion
 
 All times are **CET (UTC +1)**
@@ -106,7 +106,7 @@ All times are **CET (UTC +1)**
 [Find your name here]({{ site.baseurl }}{% link DSB2021/participants.md %})
 
 ## Mailing List
-We use the dsb2021-groups@unimib.it mailing list for discussions and the diffusion of fresh informations. 
+We use the dsb2021-groups@unimib.it mailing list for discussions and the diffusion of fresh informations.
 You will be added to the mailing list when you register.
 
 * To unsubscribe: send email to dsb2021-groups+unsubscribe@unimib.it
@@ -120,14 +120,14 @@ You will be added to the mailing list when you register.
 
 #### Where
 
-![University of Milan-Bicocca U4](img/bicocca.png) 
+![University of Milan-Bicocca U4](img/bicocca.png)
 
 The workshop will take place **virtually** and is organized by the Università di Milano - Bicocca, Milano, Italy.
 We will send the instructions for joining the conference to all
 registered participants via email.
 
 ## Supports
-This meeting is supported by 
+This meeting is supported by
 
 *  [Università di Milano - Bicocca](https://www.unimib.it)
 *  [PANGAIA](https://www.pangenome.eu/)
