--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -12,9 +12,7 @@ To participate you need to register (step 1/2) and potentially, to submit an abs
 
 ### 1/2: Registration (mandatory)
 
-* Participation is free, but registration is mandatory. Please fill this [form](https://docs.google.com/forms/d/e/1FAIpQLSevYzjniyLKGT93ryzwqvaaotoBV0BZuqeNUGYQb7ZksyB5iw/viewform?usp=sf_link).
-
-The number of attendees is limited. Avoid late registrations.
+* Participation is free, but registration is mandatory. Registrations are now closed.
 
 ### 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/conferences/?conf=dsb2021)
