--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -8,11 +8,16 @@ image: img/milano_portanuova.jpg
 # How to participate
 To participate you need to register (step 1/2) and potentially, to submit an abstract (step 2/2).
 
+
 <u>Deadline:</u> January 27
 
 ### 1/2: Registration (mandatory)
 
 * Participation is free, but registration is mandatory. Registrations are now closed.
+
+* All participants should have received an email with the instructions
+  for joining the workshop. If you have not received such an email,
+please contact Yuri Pirola (yuri.pirola@unimib.it) as soon as possible.
 
 ### 2/2: Submit an abstract
 If you wish to present a talk, submit your abstract via [EasyChair](https://easychair.org/conferences/?conf=dsb2021)
