--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -15,7 +15,7 @@ To participate you need to register (step 1/2) and potentially, to submit an abs
 
 * Participation is free, but registration is mandatory. Registrations are now closed.
 
-* All participants should have received an email with the instructions
+All participants should have received an email with the instructions
   for joining the workshop. If you have not received such an email,
 please contact Yuri Pirola (yuri.pirola@unimib.it) as soon as possible.
 
