--- a/DSB2021/DSB2021.md
+++ b/DSB2021/DSB2021.md
@@ -31,6 +31,14 @@ Link to all provided slides will be provided soon.
 
 ## Program
 
+The workshop will be live streamed on YouTube:
+
+* [Feb 11, first session (13:00-15:00](https://youtu.be/vjUflAUxh3Q)
+* [Feb 11, second session (15:30-18:00](https://youtu.be/NYSVsQK_Ksk)
+* [Feb 12, first session (13:00-15:00](https://youtu.be/woH0Tn03tZw)
+* [Feb 12, second session (15:30-18:00](https://youtu.be/ER0ls_Z-1RY)
+
+
 ### February 11
 
 **13:00**
